src/test/ui/type/type-ascription-instead-of-statement-end.stderr
error: expected type, found `0`
  --> $DIR/type-ascription-instead-of-statement-end.rs:5:5
   |
LL |     println!("test"):
   |                     - help: try using a semicolon: `;`
LL |     0;
   |     ^ expecting a type here because of type ascription

error: expected type, found `0`
  --> $DIR/type-ascription-instead-of-statement-end.rs:9:23
   |
LL |     println!("test"): 0;
   |                       ^ expecting a type here because of type ascription

error: aborting due to 2 previous errors

